--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -12,12 +13,24 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.7",
+    "ethereumjs-util": "^7.1.4",
+    "ethers": "^5.5.4",
+    "lodash": "^4.17.21",
+    "pubsub": "^3.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux-saga": "^1.1.3",
     "sass": "^1.49.7",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.7.0",
+    "web3-provider-engine": "^16.0.3",
+    "web3-react": "^5.0.5",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
